# sycl_test

./: .gitignore  CMakeLists.txt  test.spirv
src/: main.cpp
